fix-login-reponsive

--- a/scss/main.css
+++ b/scss/main.css
@@ -6,15 +6,15 @@
 
 body {
   height: 100vh;
-  background-image: url(../img/BG.png);
-  background-repeat: no-repeat;
-  background-size: cover;
   font-family: "Roboto"; }
 
 .login {
   width: 100%;
   height: 100%;
-  max-width: 1920px; }
+  max-width: 1920px;
+  background-image: url(../img/BG.png);
+  background-repeat: no-repeat;
+  background-size: cover; }
   .login .login__flex {
     height: 100%;
     display: flex;
@@ -55,8 +55,7 @@ body {
   max-width: 635px;
   width: 100%; }
   .chart__login img {
-    height: 100%;
-    max-width: 100%;
+    width: 80%;
     object-fit: fill; }
 
 .login__flexRight {
@@ -186,9 +185,18 @@ form span:hover {
 @media only screen and (max-width: 1186px) {
   .login__flexRight {
     width: 60%; } }
-@media only screen and (max-width: 1024px) {
+@media only screen and (max-width: 1178px) {
   .login__flexLeft {
-    display: none; }
+    padding: 0px;
+    width: 0px; }
+    .login__flexLeft .logo__login-navi a {
+      position: absolute;
+      top: 50px;
+      left: 50px;
+      opacity: 0.4;
+      height: 28px; }
+    .login__flexLeft .logo__login-navi p {
+      display: none; }
 
   .chart__login {
     display: none; }
@@ -198,12 +206,32 @@ form span:hover {
     padding: 0px 15px; } }
 @media only screen and (max-width: 922px) {
   .login__flexRight .login__block {
-    max-width: 350px; } }
-@media only screen and (max-width: 591px) {
-  .login__flexRight .copyright {
+    max-width: 350px; }
+
+  .login__flexLeft .logo__login-navi a {
+    position: absolute;
+    top: 50px;
+    left: 30px;
+    opacity: 0.4;
+    height: 30px; }
+  .login__flexLeft .logo__login-navi p {
     display: none; } }
+@media only screen and (max-width: 591px) {
+  .login__flexLeft .logo__login-navi a {
+    display: none; }
+
+  .login__flexRight .copyright .copyright-detail a {
+    padding: 0px 5px;
+    font-size: 12px; } }
 @media only screen and (max-width: 467px) {
   .login__flexRight .login__block {
-    max-width: 300px; } }
+    max-width: 300px; }
+  .login__flexRight .copyright {
+    display: none; } }
+#root {
+  width: 1920px; }
+
+body {
+  background-image: none; }
 
 /*# sourceMappingURL=main.css.map */
