--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,5 @@
 $bg-col: #131721;
+$bg-chart: #1d2029;
 $col-white: #ffffff;
 $col-gray: #a0a3af;
 $col-orange: #e7ab21;
@@ -13,8 +14,8 @@ $gray-col-th: #292d38;
 $green-col-th: #0fb159;
 $red-col-th: #dd2e16;
 $font-family: "Roboto";
-$font-size-14px: 14px;
-$font-size-12px: 12px;
+$font-14px: 14px;
+$font-12px: 12px;
 @mixin CSSlogin($font-size: 14px, $line-height: 20px) {
   font-size: $font-size;
   line-height: $line-height;
@@ -43,9 +44,9 @@ $font-size-12px: 12px;
   box-sizing: border-box;
   font-family: "Roboto";
 }
-// body::-webkit-scrollbar {
-//   width: 0 !important;
-// }
+body::-webkit-scrollbar {
+  width: 0 !important;
+}
 
 body {
   height: 100vh;
@@ -160,7 +161,7 @@ form {
     background-color: #313645;
     padding-left: 16px;
     color: $col-white;
-    font-size: $font-size-14px;
+    font-size: $font-14px;
     outline: none;
     border: none;
   }
@@ -207,7 +208,7 @@ form {
     a {
       color: $col-gray;
       margin-bottom: 25px;
-      font-size: $font-size-14px;
+      font-size: $font-14px;
       text-decoration: none;
     }
     a:hover {
@@ -217,11 +218,11 @@ form {
 
   span {
     color: $col-gray;
-    font-size: $font-size-14px;
+    font-size: $font-14px;
     a {
       color: $col-orange;
       text-decoration: none;
-      font-size: $font-size-14px;
+      font-size: $font-14px;
     }
   }
 
@@ -241,7 +242,7 @@ form {
     .copyright-detail {
       display: flex;
       justify-content: space-between;
-      font-size: $font-size-14px;
+      font-size: $font-14px;
       a {
         text-decoration: none;
         color: $col-gray;
@@ -365,8 +366,474 @@ form {
 
 //market
 #root {
-  width: 1920px;
+  width: 100%;
+  background-color: $bg-col;
+  height: 100vh;
 }
-body {
-  background-image: none;
+
+header {
+  width: 100%;
+  position: sticky;
+  top: 0;
+  z-index: 111;
+}
+
+// header__wrap
+.header__wrap {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0px 15px;
+  height: 60px;
+  background-color: $bg-col;
+}
+
+.header__content {
+  display: flex;
+  align-items: center;
+  .header__logo {
+    display: flex;
+    a {
+      text-decoration: none;
+    }
+    a {
+      .lg-name {
+        margin-left: 12px;
+      }
+    }
+  }
+}
+.header__nav {
+  padding-left: 30px;
+  .navbar {
+    display: flex;
+    margin: 0px;
+    align-items: center;
+    list-style: none;
+  }
+}
+.navbar__item {
+  .navbar__item-link {
+    display: flex;
+    align-items: center;
+    height: 60px;
+    text-decoration: none;
+    color: $col-gray;
+    font-size: $font-14px;
+    padding: 0px 16px;
+    border-bottom: 2px;
+  }
+  .navbar__item-link:active {
+    color: $col-orange;
+    border-bottom: 1px solid $col-orange;
+  }
+}
+// header__right
+.header__right {
+  display: flex;
+  align-items: center;
+}
+.header__flex {
+  display: flex;
+  align-items: center;
+  border-right: 1px solid #292d38;
+  .img-transaction {
+    padding: 0px 18px 0px 5px;
+    color: $col-orange;
+  }
+  span {
+    color: $col-orange;
+    font-size: 16px;
+    padding-right: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .star {
+    height: 19px;
+    width: 30px;
+    background-color: #cf422f;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4px;
+    img {
+      height: 10px;
+    }
+  }
+  p {
+    margin: 0px;
+    color: $col-gray;
+    padding: 0px 5px 0px 10px;
+    font-size: $font-12px;
+  }
+  .dropdown-icon {
+    padding: 0px 12px 0px 4px;
+    height: 5px;
+  }
+}
+.header__account {
+  display: flex;
+  align-items: center;
+  .ring-box {
+    padding: 0px 20px;
+  }
+  .avata-girl {
+    padding: 0px 8px;
+  }
+  p {
+    padding: 0px 12px;
+    margin: 0px;
+    color: $col-white;
+  }
+  .dropdown-icon {
+    height: 5px;
+  }
+}
+// end-header__right
+
+// chart
+.swiper {
+  background-color: $bg-chart;
+}
+
+.swiper-wrapper {
+  padding: 0px 15px;
+
+  .swiper-slide {
+    padding: 20px 0px 0px 0px;
+    height: 140px;
+  }
+}
+
+.chart__wrap {
+  display: flex;
+  justify-content: space-between;
+  border-right: 1px solid #292d38;
+  color: #ffffff;
+  margin-right: -15px;
+  padding-right: 15px;
+}
+
+.chart__content {
+  width: 50%;
+  // max-width: 140px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  .chart__header {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 11px;
+  }
+}
+.chart__img {
+  width: 160px;
+  img {
+    height: 100%;
+    width: 100%;
+  }
+}
+.chart__header {
+  &-text {
+    display: flex;
+    div {
+      font-size: 12px;
+    }
+    span {
+      font-size: 10px;
+      color: $col-gray;
+      padding: 0px 0px 2px 8px;
+      margin-top: auto;
+    }
+  }
+  &-nbGreen {
+    color: $col-green-dt;
+    font-size: 12px;
+    margin-top: 3px;
+    font-weight: bold;
+    span {
+      color: $col-green-dt;
+      font-size: 10px;
+    }
+  }
+  &-number {
+    margin-top: 5px;
+    font-size: $font-12px;
+    .fa-solid.fa-up-long {
+      color: $col-green-dt;
+    }
+    .nb-green {
+      color: $col-green-dt;
+    }
+    .nb-purple {
+      color: $col-purple-dt;
+    }
+    .nb-orange {
+      color: $col-yellow-dt;
+      padding: 0px 8px;
+    }
+    .down-log {
+      color: $col-red-dt;
+    }
+    .nb-blue {
+      color: $col-blue-dt;
+    }
+  }
+}
+
+.chart__footer {
+  font-size: $font-12px;
+  color: $col-gray;
+  line-height: 18px;
+}
+
+// price__board
+.price__board {
+  background-color: #292d38;
+  display: flex;
+  padding: 5px 0px;
+  justify-content: space-between;
+}
+
+.price__left {
+  display: flex;
+  .block__search {
+    padding: 0px;
+    padding-left: 16px;
+    border-right: 2px solid #313645;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    div {
+      position: relative;
+      img {
+        position: absolute;
+        top: 7px;
+      }
+      input {
+        background-color: #292d38;
+        padding: 5px 0px;
+        outline: none;
+        border: none;
+        padding-left: 20px;
+        color: $col-white;
+      }
+    }
+  }
+}
+
+.block__main {
+  .block__item {
+    display: flex;
+    align-items: center;
+    list-style: none;
+    color: #ffffff;
+    margin: 0px;
+    padding: 0px;
+    &-link {
+      margin: 0px;
+      display: flex;
+      align-items: center;
+      font-size: 13px;
+      padding: 0px 8px;
+      list-style: none;
+      a {
+        text-decoration: none;
+        color: #797f8a;
+        padding: 4px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        img {
+          padding: 0px 8px;
+        }
+      }
+      a:hover {
+        color: $col-orange;
+        padding: 4px;
+        background-color: #373940;
+        border-radius: 2px;
+      }
+    }
+  }
+}
+
+.tab-content > .active {
+  display: block;
+  color: $col-white;
+  // padding: 20px 10px;
+}
+
+// price__left
+header {
+  .price__board {
+    .price__left {
+      .nav-tabs {
+        border-bottom: none;
+      }
+    }
+  }
+}
+
+.nav-tabs {
+  li {
+    background-color: #292d38;
+    a {
+      background-color: none;
+      color: #797f8a;
+      padding: 0px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      img {
+        padding: 0px 6px;
+      }
+      .star {
+        margin-bottom: 4px;
+        height: 13px;
+      }
+    }
+    a:hover {
+      border-radius: 0px;
+      background-color: red;
+    }
+  }
+  .active {
+    a {
+      color: $col-gray !important;
+      background-color: #292d38 !important;
+      border: none !important;
+      // padding: 0px;
+    }
+    a:hover {
+      color: $col-gray !important;
+      background-color: #292d38 !important;
+      border: none !important;
+    }
+    a:focus {
+      color: $col-gray !important;
+      background-color: #292d38 !important;
+    }
+  }
+  .active {
+    background-color: #292d38;
+  }
+}
+// price__right
+.price__right {
+  .nav-tabs {
+    border-bottom: none;
+  }
+}
+
+// table
+@mixin CSSborders($border: 1px solid #20232d) {
+  border: $border;
+}
+@mixin CSSchangeborder($border: 1px solid #282c37) {
+  border: $border;
+}
+@mixin textAlign($text-align: center) {
+  text-align: center;
+}
+
+.table_price {
+  .theader {
+    position: -webkit-sticky; // this is for all Safari (Desktop & iOS), not for Chrome
+    position: sticky;
+    top: 250px;
+    background-color: $bg-col;
+    z-index: 1; // any positive value, layer order is global
+    // background: #fff;
+  }
+}
+.table_price {
+  overflow: hidden;
+  border-collapse: collapse;
+  background-color: $bg-col;
+  overflow-y: scroll;
+  width: 100%;
+  max-width: 1920px;
+  @include CSSborders();
+  tr {
+    @include CSSborders();
+    // position: sticky;
+    // border: 1px solid black;
+    th {
+      @include CSSborders();
+      font-size: $font-12px;
+      // position: -webkit-sticky; // this is for all Safari (Desktop & iOS), not for Chrome
+      // position: sticky;
+      // border: 1px solid black;
+      // top: 260px;
+      // background-color: white;
+      // color: black;
+      // z-index: 1; // any positive value, layer order is global
+      // // background: #fff;
+      a {
+        text-decoration: none;
+        padding: 0px 5px;
+      }
+    }
+    .blackbg {
+      color: $col-white;
+      @include textAlign();
+    }
+    .border-left {
+      @include textAlign();
+      @include CSSchangeborder();
+      color: $col-white;
+    }
+    .border-right {
+      @include textAlign();
+      color: $col-gray;
+      padding: 8px 0px;
+      border: 1px solid #282c37;
+    }
+    .price-item {
+      color: $col-white;
+      padding: 8px 0px !important;
+      border: 1px solid #282c37;
+      @include textAlign();
+    }
+  }
+}
+
+.table_price {
+  tr {
+    td {
+      @include textAlign();
+      padding: 2px 15px;
+      font-size: 11px;
+      border: 1px solid #20232d;
+    }
+    .green-col {
+      color: $green-col-th;
+    }
+    .red-col {
+      color: $red-col-th;
+    }
+
+    .purple-col {
+      color: $col-purple-dt;
+    }
+    .blue-col {
+      color: $col-blue-dt;
+    }
+    .yellow-col {
+      color: $col-yellow-dt;
+    }
+    .white-col {
+      color: $col-white;
+    }
+    .change-color {
+      background-color: #20242f !important;
+      padding: 0px 18px;
+      border: 1px solid #282c37;
+    }
+    // .change-width {
+    //   padding: 0px 65px !important;
+    // }
+  }
 }
