--- a/scss/main.css
+++ b/scss/main.css
@@ -58,7 +58,7 @@ body {
   max-width: 635px;
   width: 100%; }
   .chart__login img {
-    width: 80%;
+    width: 100%;
     object-fit: fill; }
 
 .login__flexRight {
@@ -182,6 +182,13 @@ form span:hover {
 @media only screen and (max-width: 1500px) {
   .login__flexLeft {
     padding-right: 20px; } }
+@media only screen and (max-width: 1496px) {
+  .chart__login img {
+    width: 90%;
+    object-fit: fill; }
+
+  .logo__login-navi {
+    margin-bottom: 69px; } }
 @media only screen and (max-width: 1390px) {
   .login__flexLeft {
     padding-right: 0px; } }
@@ -227,10 +234,31 @@ form span:hover {
     padding: 0px 5px;
     font-size: 12px; } }
 @media only screen and (max-width: 467px) {
+  .login__block .login__heading {
+    font-size: 30px; }
+
   .login__flexRight .login__block {
     max-width: 300px; }
-  .login__flexRight .copyright {
-    display: none; } }
+  .login__flexRight .copyright .copyright-detail a {
+    padding: 0px 5px;
+    font-size: 10px; } }
+@media only screen and (max-width: 375px) {
+  .login__block {
+    max-width: 273px; }
+    .login__block .login__heading {
+      font-size: 28px;
+      margin-bottom: 32px; }
+    .login__block form .login__btn a button {
+      font-size: 14px;
+      padding: 14px 0px; }
+    .login__block .login__acc input {
+      padding: 14px 0px 14px 14px; }
+    .login__block .login__pass input {
+      padding: 14px 0px 14px 14px; }
+
+  .copyright .copyright-detail a {
+    padding: 0px 5px;
+    font-size: 8px; } }
 #root {
   width: 100%;
   background-color: #131721;
