--- a/scss/main.scss
+++ b/scss/main.scss
@@ -50,9 +50,6 @@ body::-webkit-scrollbar {
 
 body {
   height: 100vh;
-  // background-image: url(../img/BG.png);
-  // background-repeat: no-repeat;
-  // background-size: cover;
   font-family: $font-family;
 }
 
@@ -111,8 +108,7 @@ body {
   max-width: 635px;
   width: 100%;
   img {
-    // max-width: 86%;
-    width: 80%;
+    width: 100%;
     object-fit: fill;
   }
 }
@@ -267,7 +263,17 @@ form {
     padding-right: 20px;
   }
 }
-
+@media only screen and(max-width: 1496px) {
+  .chart__login {
+    img {
+      width: 90%;
+      object-fit: fill;
+    }
+  }
+  .logo__login-navi {
+    margin-bottom: 69px;
+  }
+}
 @media only screen and(max-width: 1390px) {
   .login__flexLeft {
     padding-right: 0px;
@@ -354,12 +360,60 @@ form {
   }
 }
 @media only screen and(max-width:467px) {
+  .login__block {
+    .login__heading {
+      font-size: 30px;
+    }
+  }
   .login__flexRight {
     .login__block {
       max-width: 300px;
     }
     .copyright {
-      display: none;
+      .copyright-detail {
+        a {
+          padding: 0px 5px;
+          font-size: 10px;
+        }
+      }
+    }
+  }
+}
+
+@media only screen and(max-width:375px) {
+  .login__block {
+    max-width: 273px;
+    .login__heading {
+      font-size: 28px;
+      margin-bottom: 32px;
+    }
+    form {
+      .login__btn {
+        a {
+          button {
+            font-size: 14px;
+            padding: 14px 0px;
+          }
+        }
+      }
+    }
+    .login__acc {
+      input {
+        padding: 14px 0px 14px 14px;
+      }
+    }
+    .login__pass {
+      input {
+        padding: 14px 0px 14px 14px;
+      }
+    }
+  }
+  .copyright {
+    .copyright-detail {
+      a {
+        padding: 0px 5px;
+        font-size: 8px;
+      }
     }
   }
 }
