--- a/scss/main.css
+++ b/scss/main.css
@@ -13,7 +13,7 @@ body {
 
 .login {
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   max-width: 1920px;
   background-image: url(../img/BG.png);
   background-repeat: no-repeat;
@@ -21,6 +21,7 @@ body {
   .login .login__flex {
     height: 100%;
     display: flex;
+    min-height: 100vh;
     justify-content: space-between; }
 
 .login__flexLeft {
@@ -213,6 +214,7 @@ form span:hover {
 
   .login__flexRight {
     width: 100%;
+    min-height: 100vh;
     padding: 0px 15px; } }
 @media only screen and (max-width: 922px) {
   .login__flexRight .login__block {
@@ -301,6 +303,8 @@ header {
   align-items: center; }
   .header__content .header__logo {
     display: flex; }
+    .header__content .header__logo .fa-solid.fa-xmark {
+      display: none; }
     .header__content .header__logo a {
       text-decoration: none; }
     .header__content .header__logo a .lg-name {
@@ -446,10 +450,23 @@ header {
   line-height: 18px; }
 
 .price__board {
+  overflow-x: auto;
   background-color: #292d38;
   display: flex;
   padding: 4px 0px;
   justify-content: space-between; }
+
+.price__right .nav .nav-item a {
+  background-color: #292d38;
+  border: none; }
+.price__right .nav .nav-item a:hover {
+  background-color: none; }
+
+.price__left .nav-pills .active a {
+  background-color: #292d38;
+  border: none; }
+.price__left .nav-pills .active a:hover {
+  background-color: none; }
 
 .price__left {
   display: flex; }
@@ -480,7 +497,7 @@ header {
 .price__left {
   display: flex;
   align-items: center; }
-  .price__left .nav-tabs {
+  .price__left .nav-pills {
     display: flex;
     align-items: center;
     list-style: none;
@@ -489,27 +506,28 @@ header {
     padding: 0px;
     width: 900px;
     width: 100%; }
-    .price__left .nav-tabs .nav-item {
+    .price__left .nav-pills .nav-item {
       margin: 0px;
       display: flex;
       align-items: center;
       font-size: 14px;
       padding: 0px 10px;
       list-style: none; }
-      .price__left .nav-tabs .nav-item .nav-link {
+      .price__left .nav-pills .nav-item .nav-link {
         text-decoration: none;
         color: #797f8a;
-        padding: 4px; }
-      .price__left .nav-tabs .nav-item a {
+        padding: 4px;
+        white-space: nowrap; }
+      .price__left .nav-pills .nav-item a {
         margin-right: 0px;
         border: none;
         color: #e7ab21;
         outline: none; }
-        .price__left .nav-tabs .nav-item a img {
+        .price__left .nav-pills .nav-item a img {
           padding: 0px 5px; }
-        .price__left .nav-tabs .nav-item a .star {
+        .price__left .nav-pills .nav-item a .star {
           margin-bottom: 4px; }
-      .price__left .nav-tabs .nav-item a:hover {
+      .price__left .nav-pills .nav-item a:hover {
         color: #e7ab21;
         padding: 4px;
         background-color: #373940;
@@ -518,23 +536,34 @@ header {
         border-radius: 5px;
         color: #e7ab21;
         outline: none; }
-      .price__left .nav-tabs .nav-item a:focus {
+      .price__left .nav-pills .nav-item a:focus {
         background-color: #373940;
         border-radius: 5px;
         border: none;
         color: #e7ab21;
         outline: none; }
 
-header .price__board .price__left .nav-tabs {
+.price__left .nav-pills {
   border-bottom: none; }
-header .price__board .price__right .nav-tabs {
-  border-bottom: none; }
-  header .price__board .price__right .nav-tabs .nav-item a {
+
+.price__right .nav-pills {
+  border-bottom: none;
+  display: flex; }
+  .price__right .nav-pills .nav-item a {
     margin-right: 0px;
     padding: 10px; }
-  header .price__board .price__right .nav-tabs .nav-item a:hover {
-    background-color: #373940;
+  .price__right .nav-pills .nav-item a:hover {
+    background-color: #292d38;
     border: none; }
+
+.table-container::-webkit-scrollbar {
+  width: 0 !important;
+  display: none; }
+
+.table-container {
+  max-height: calc(100vh - 295px);
+  height: 100vh;
+  overflow-y: auto; }
 
 .table_price .theader {
   position: -webkit-sticky;
@@ -644,12 +673,13 @@ header .price__board .price__right .nav-tabs {
 .dt-box div .txt-red {
   color: #dd2e16; }
 
+.overflow::-webkit-scrollbar {
+  width: 0 !important;
+  display: none; }
+
 @media only screen and (max-width: 1946px) {
   .overflow {
-    overflow-x: scroll; }
-
-  .overflow::-webkit-scrollbar {
-    width: 0 !important; } }
+    overflow-x: scroll; } }
 @media only screen and (max-width: 1205px) {
   .header__nav {
     padding-left: 10px; }
@@ -667,13 +697,51 @@ header .price__board .price__right .nav-tabs {
   .header__account p {
     padding: 0px 10px; } }
 @media only screen and (max-width: 1030px) {
-  .header__nav .navbar {
-    display: none; } }
+  .header__logo .logo {
+    position: relative; }
+  .header__logo .menu__box {
+    position: absolute;
+    top: 0px;
+    width: 300px;
+    left: -300px;
+    height: 100vh;
+    background-color: #212940;
+    z-index: 10;
+    transition: left 500ms; }
+    .header__logo .menu__box .fa-solid.fa-xmark {
+      display: block;
+      font-size: 30px;
+      color: #e7ab21;
+      margin: 20px;
+      width: 10px; }
+  .header__logo .active {
+    left: 0; }
+
+  .navbar__item {
+    display: none; }
+
+  .navHide {
+    display: flex !important;
+    flex-direction: column; }
+    .navHide li {
+      list-style: none;
+      padding: 14px 5px;
+      border-bottom: 1px solid #38ada9;
+      display: flex;
+      justify-content: center; }
+      .navHide li a {
+        text-decoration: none;
+        color: #ffffff;
+        text-align: center; }
+      .navHide li a:hover {
+        color: #e7ab21; }
+    .navHide li:hover {
+      background-color: #354a6e; } }
 @media only screen and (max-width: 1476px) {
   .mySwiper .swiper-wrapper .swiper-slide {
     min-width: 340px; } }
 @media only screen and (max-width: 1322px) {
-  .price__left .nav-tabs .nav-item {
+  .price__left .nav-pills .nav-item {
     padding: 0px 5px; } }
 @media only screen and (max-width: 1496px) {
   .thumbnail__wrap {
@@ -681,5 +749,8 @@ header .price__board .price__right .nav-tabs {
     .thumbnail__wrap .thumbnail__board {
       min-width: 240px;
       padding: 5px 10px; } }
+@media only screen and (max-width: 1141px) {
+  .price__right .nav-pills .nav-item {
+    padding: 0px 5px; } }
 
 /*# sourceMappingURL=main.css.map */
