--- a/scss/main.scss
+++ b/scss/main.scss
@@ -562,6 +562,9 @@ header {
     justify-content: center;
     align-items: center;
   }
+  span:hover {
+    color: $col-white;
+  }
   .star {
     height: 19px;
     width: 30px;
@@ -580,6 +583,9 @@ header {
     padding: 0px 5px 0px 10px;
     font-size: $font-12px;
   }
+  p:hover {
+    color: $col-orange;
+  }
   .dropdown-icon {
     padding: 0px 12px 0px 4px;
     height: 5px;
@@ -590,6 +596,9 @@ header {
   align-items: center;
   .ring-box {
     padding: 0px 20px;
+    // .ring:hover {
+
+    // }
   }
   .avata-girl {
     padding: 0px 8px;
@@ -599,9 +608,17 @@ header {
     margin: 0px;
     color: $col-white;
   }
+  p:hover {
+    color: $col-orange;
+  }
   .dropdown-icon {
     height: 5px;
   }
+}
+.menuHide,
+.navHide,
+.tabBox {
+  display: none;
 }
 
 // chart__wrap
@@ -694,6 +711,11 @@ header {
   font-size: $font-12px;
   color: $col-gray;
   line-height: 18px;
+}
+
+.price__board::-webkit-scrollbar {
+  width: 0 !important;
+  display: none;
 }
 
 .price__board {
@@ -852,7 +874,7 @@ header {
 }
 
 .table-container {
-  max-height: calc(100vh - 295px);
+  max-height: calc(100vh - 254px);
   height: 100vh;
   overflow-y: auto;
 }
@@ -898,7 +920,7 @@ header {
     }
     .price-item {
       color: $col-white;
-      padding: 8px 0px !important;
+      padding: 8px 0px;
       border: 1px solid #282c37;
       @include textAlign();
     }
@@ -933,13 +955,15 @@ header {
       color: $col-white;
     }
     .change-color {
-      background-color: #20242f !important;
+      background-color: #20242f;
       padding: 0px 18px;
       border: 1px solid #282c37;
     }
-    // .change-width {
-    //   padding: 0px 65px !important;
-    // }
+  }
+}
+tbody {
+  .box-data:hover {
+    background-color: rgb(70, 68, 68);
   }
 }
 // thumbnail__wrap
@@ -1021,86 +1045,6 @@ header {
     overflow-x: scroll;
   }
 }
-@media only screen and(max-width:1205px) {
-  .header__nav {
-    padding-left: 10px;
-  }
-  .navbar__item {
-    .navbar__item-link {
-      padding: 0px 10px;
-    }
-  }
-  .header__flex {
-    .img-transaction {
-      padding: 0px 15px 0px 5px;
-    }
-    span {
-      padding-right: 17px;
-    }
-  }
-  .header__account {
-    .ring-box {
-      padding: 0px 12px;
-    }
-    p {
-      padding: 0px 10px;
-    }
-  }
-}
-@media only screen and (max-width: 1030px) {
-  // css class active
-  .header__logo {
-    .logo {
-      position: relative;
-    }
-    .menu__box {
-      position: absolute;
-      top: 0px;
-      width: 300px;
-      left: -300px;
-      height: 100vh;
-      background-color: #212940;
-      z-index: 10;
-      transition: left 500ms;
-      .fa-solid.fa-xmark {
-        display: block;
-        font-size: 30px;
-        color: $col-orange;
-        margin: 20px;
-        width: 10px;
-      }
-    }
-
-    .active {
-      left: 0;
-    }
-  }
-  .navbar__item {
-    display: none;
-  }
-  .navHide {
-    display: flex !important;
-    flex-direction: column;
-    li {
-      list-style: none;
-      padding: 14px 5px;
-      border-bottom: 1px solid $col-green;
-      display: flex;
-      justify-content: center;
-      a {
-        text-decoration: none;
-        color: $col-white;
-        text-align: center;
-      }
-      a:hover {
-        color: $col-orange;
-      }
-    }
-    li:hover {
-      background-color: #354a6e;
-    }
-  }
-}
 
 // respo-swipper
 @media only screen and(max-width:1476px) {
@@ -1139,4 +1083,149 @@ header {
       }
     }
   }
+}
+
+@media only screen and(max-width:1205px) {
+  .header__nav {
+    padding-left: 10px;
+  }
+  .navbar__item {
+    .navbar__item-link {
+      padding: 0px 10px;
+    }
+  }
+  .header__flex {
+    .img-transaction {
+      padding: 0px 15px 0px 5px;
+    }
+    span {
+      padding-right: 17px;
+    }
+  }
+  .header__account {
+    .ring-box {
+      padding: 0px 12px;
+    }
+    p {
+      padding: 0px 10px;
+    }
+  }
+}
+
+@media only screen and(max-width:1036px) {
+  .navbar__item {
+    .navbar__item-link {
+      padding: 0px 5px;
+    }
+  }
+  .header__flex {
+    .img-transaction {
+      padding: 0px 6px;
+    }
+    span {
+      padding-right: 17px;
+      font-size: 14px;
+    }
+  }
+  .header__account {
+    .avata-girl {
+      padding: 0px 4px;
+    }
+  }
+}
+
+@media only screen and (max-width: 990px) {
+  // .logo {
+  //   display: none;
+  // }
+  .header__content {
+    .header__logo {
+      a {
+        .lg-name {
+          margin-left: 15px;
+          height: 18px;
+        }
+      }
+    }
+  }
+  .header__wrap {
+    position: relative;
+  }
+
+  //css click menuHide
+  .header__right {
+    .tabBox {
+      display: flex;
+      width: 300px;
+      top: 60px;
+      left: -300px;
+      height: calc(100vh - 60px);
+      background-color: #16222c;
+      z-index: 2;
+      position: absolute;
+      transition: left 400ms;
+    }
+    .active {
+      left: 0;
+      width: 100%;
+    }
+  }
+
+  .header__wrap {
+    position: relative;
+  }
+  .header__left {
+    .navbar {
+      display: none;
+    }
+  }
+  .header__right {
+    .header__flex {
+      .img-transaction,
+      span,
+      p,
+      .dropdown-icon {
+        display: none;
+      }
+    }
+    .header__account {
+      .avata-girl,
+      p,
+      .dropdown-icon {
+        display: none;
+      }
+    }
+  }
+  .navHide {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    .list {
+      list-style: none;
+      width: 100%;
+      padding: 20px 0px 20px 30px;
+      border-top: 1px solid #242832;
+      display: flex;
+      a {
+        text-decoration: none;
+        color: $col-white;
+        font-size: 14px;
+        font-weight: 700px;
+      }
+      a:hover {
+        color: $col-orange;
+      }
+    }
+    .list:hover {
+      background-color: #292d38;
+    }
+  }
+  .logo {
+    cursor: pointer;
+  }
+  // .menuHide {
+  //   display: flex;
+  //   padding-left: 4px;
+  //   cursor: pointer;
+  // }
 }
